--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -1,7 +1,7 @@
 [
     {
         "startDate": "20.09.2018",
-        "endDate": "...",
+        "endDate": "01.03.2019",
         "employmentCompany": "Capgemini Sweden",
         "company": "nordea",
         "industry": "finance",
@@ -11,10 +11,10 @@
         "tools": ["Java 8", "Angular 7", "SpringBoot 2", "Swagger", "Gradle", "Linux", "Oracle"]
     },
     {
-        "startDate": "01.04.2015",
-        "endDate": "10.08.2018",
+        "startDate": "01/04/2015",
+        "endDate": "10/08/2018",
         "employmentCompany": "MøllerGruppen",
-        "company": "MøllerGruppen",
+        "company": "moller",
         "industry": "auto",
         "projectName": "MittBilhold",
         "description": "mittbilhold description",
@@ -22,10 +22,10 @@
         "tools": ["Java 8", "JavaScript", "Maven", "linux", "postgres"]
     },
     {
-        "startDate": "01.04.2013",
-        "endDate": "10.08.2018",
+        "startDate": "01/04/2013",
+        "endDate": "10/08/2018",
         "employmentCompany": "MøllerGruppen",
-        "company": "MøllerGruppen",
+        "company": "moller",
         "industry": "auto",
         "projectName": "SpiderAdapter",
         "description": "spider adapter description",
