--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -6,8 +6,13 @@
         "company": "nordea",
         "industry": "finance",
         "projectName": "NEM - Nordea Enterprice Manager",
-        "description": "deployment and configuration inhouse solution for java applications",
-        "skills": ["microservices", "java", "web", "rest"],
+        "description": ["In Nordea i was working on implementation of deployment system",
+        "with microservices in java 8 in backend and angular 7 as frontend.",
+        "On the backend I have used spring boot, spring cloud",
+        "dependencies as eureka, sleuth, feign client, spring security.",
+        "Frontend was implemented with angular 7 and angular material",
+        "with typescript. Security was implemented with https and OpenID"],
+        "skills": ["microservices", "java", "web", "rest", "openid"],
         "tools": ["java 8", "angular 7", "springBoot 2", "swagger", "gradle", "linux", "oracle"]
     },
     {
@@ -76,8 +81,8 @@
             "It integrates with several other applications, like Outlook calendar, archive-system, kis-system and ",
             " others. IS Safe also supports a mobile solution"
         ],
-        "skills": ["java", "web", "rest", "websphere application server (WAS)"],
-        "tools": ["java 8", "javaScript", "maven", "WAS", "db2"]
+        "skills": ["java", "web", "rest", "weblogic"],
+        "tools": ["java 8", "javaScript", "maven", "oracle"]
     },
     {
         "startDate": "01/04/2008",
@@ -86,8 +91,77 @@
         "company": "CGI Group Inc",
         "industry": "el",
         "projectName": "AMS meetering",
-        "description": "Communication bridge application between internal customer system and smart meetering systems – enermet, landis+gyr",
+        "description": [
+            "Communication bridge application between internal customer system ",
+            "and smart meetering systems – enermet, landis+gyr"],
         "skills": ["java", "jsf", "spring", "hibernate", "oracle", "weblogic"],
-        "tools": ["java", "maven", "weblogic", "db2"]
-    }        
+        "tools": ["java", "maven", "weblogic", "oracle"]
+    },
+    {
+        "startDate": "01/09/2007",
+        "endDate": "01/02/2008",
+        "employmentCompany": "Ameria DE",
+        "company": "Ameria DE",
+        "industry": "it",
+        "projectName": "accu-chek.de",
+        "description": [
+            "Project: Support and implement new features for web site http://www.accu-chek.de.",
+            "This is medical site for people with diabetes."],
+        "skills": ["java", "jsp", "oracle", "WebSphere"],
+        "tools": ["java", "ant", "WebSphere", "db2"]
+    },
+    {
+        "startDate": "01/01/2007",
+        "endDate": "01/08/2007",
+        "employmentCompany": "BOSSdev Inc",
+        "company": "BOSSdev Inc",
+        "industry": "it",
+        "projectName": "project manager",
+        "description": [
+            "there were several small projects for flash developers to ",
+            "evelop games and sites on flash/flex technology."],
+        "skills": ["ActionScript", "communication"],
+        "tools": ["MS Project", "Scrum", "XPlanner", "Visio"]
+    },
+    {
+        "startDate": "01/11/2005",
+        "endDate": "01/01/2007",
+        "employmentCompany": "BOSSdev Inc",
+        "company": "BOSSdev Inc",
+        "industry": "it",
+        "projectName": "gaming",
+        "description": [
+            "Gambling web site with flash games like pocker.",
+            "Integrating real money games with skill games. Customer plays",
+            "with other people and puts real money in the game. Another part",
+            "was backend administration site."],
+        "skills": ["Java", "Scrum", "jsf", "hibernate", "jboss cache", "jsp", "jaxb", "mina", "postgresql", "maven", "subversion"],
+        "tools": ["Eclipse", "Linux", "Jira", "Visio"]
+    },
+    {
+        "startDate": "01/03/2002",
+        "endDate": "01/09/2005",
+        "employmentCompany": "OffshoreCreations",
+        "company": "OffshoreCreations",
+        "industry": "it",
+        "projectName": "online casino",
+        "description": [
+            "Project: E-Learning management system was online learning",
+            "system. It was using packaging standard SCORM 1.2, 1.3 courses."],
+        "skills": ["Java", "jsp", "struts", "ibatis", "SCORM", "mina", "postgresql", "ant", "cvs"],
+        "tools": ["Eclipse", "PowerDesigner", "JasperReports"]
+    },
+    {
+        "startDate": "01/03/2001",
+        "endDate": "01/03/2002",
+        "employmentCompany": "OffshoreCreations",
+        "company": "OffshoreCreations",
+        "industry": "it",
+        "projectName": "",
+        "description": [
+            "Project: Integration of two payment systems. Integration was",
+            "implemented as a set of TSQL procedures."],
+        "skills": ["T-SQL" ],
+        "tools": ["MS Sql Server 2000", "Visual C++ 6.0,"]
+    }
 ]
